objects/STObj1__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf1__c</fullName>
        <label>sf1</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf2__c</fullName>
        <label>sf2</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <label>STObj1</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AutorabitExtId__c</columns>
        <columns>sf1__c</columns>
        <columns>sf2__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>STObj1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>STObj1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>